Fix Overlaping Bug

--- a/src/components/Home/styles/small.scss
+++ b/src/components/Home/styles/small.scss
@@ -22,6 +22,7 @@
 
     section#landing {
         flex-direction: column;
+        height: fit-content !important;
 
         .left {
             width: 100%;
@@ -67,6 +68,13 @@
 
         .right {
             width: 100% !important;
+            display: flex;
+
+            img {
+                width: 75% !important;
+                margin: auto;
+                margin-top: 10%;
+            }
 
             #dalmaTitle {
                 display: none;
